fixed spacing, linked all html files to indexcss

--- a/index.css
+++ b/index.css
@@ -22,3 +22,9 @@ a {
 p {
 	color: black;
 }
+h1 {
+	font-size: 30px;
+}
+h2 {
+	font-size: 28px;
+}
